Add more search parameters to queryForDocumentsOptional